# MS2

./: AStarSearch.cpp  AStarSearch.h  BFSsearch.cpp  BFSsearch.h  BestFirstSearch.cpp  BestFirstSearch.h  CMakeLists.txt  DFSsearch.h  MatrixSearch.h  PriorityQueue.cpp  PriorityQueue.h  Searchable.cpp  Searchable.h  Searcher.cpp  Searcher.h  Searching.cpp  Searching.h  Solution.cpp  Solution.h  algoMain.cpp  classes.h  main.cpp  parallel_server.cpp  parallel_server.h  serial_server.h
